--- a/ejs-views/add-post.ejs
+++ b/ejs-views/add-post.ejs
@@ -10,18 +10,18 @@
     <img class="imgpreview" id="myImg" src="#" width="300px">
   </div>
 
-  <form id="post-form" method="post" action="/add-post">
+  <form >
     <div class="form-info">
       <label>Название файла
-        <input id="filename" type="text" name="title">
+        <input autocomplete="off" id="filename" type="text" name="title">
       </label>
       <label>Цена (пример: "от 8 000 000 р")
-        <input type="text" name="author">
+        <input autocomplete="off" type="text" name="author" id="author">
       </label>
     </div>
     <div class="form-text">
       <label>Название авто (Nissan Juke)
-        <input name="text"></input>
+        <input autocomplete="off" id="text" name="text" type="text"></input>
       </label>
     </div>
     <div class="form-button">
