--- a/ejs-views/index.ejs
+++ b/ejs-views/index.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>gayass</title>
+        <title>Авто и запчасти из японии | Toyama auto</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -34,14 +34,30 @@
 				</div>
 			</div>
         </header>
+			
+				<!-- Achivement -->
+				<div class="achivement">
+					<div class="left-void"></div>
+					<div class="overlay sections">
+						<div class="achivement-content">
+							<div class="col-sm-8 col-xs-12">
+								<div class="achivement-details">
+									<h2>Пожалуй, лучшая компания для доставки автомобиля</h2>
+									<p>Хотите привезти машину или запчасть из Японии?
+										Здесь вы можете ознакомиться с малой частью наших возможностей! Для более подробной информации оставляйте заявку.</p>
+									<a href="#thank-you" class="buttona"> Оставить заявку </a>
+								</div>
+							</div>
+						</div>
+					</div>	
+					<div class="left-void"></div>
+				</div>
 
-		<%- include('./partials/auth.ejs') %>
+				<%- include('./partials/auth.ejs') %>
 
 		<div class="main">
 
-			<div class="left-side">
-				<a id="addPostButton" class="addPost" href="newpost.html">Добавить пост</a> 
-			</div>
+			<div class="left-side"></div>
 
 			<div class="center-side">
 
@@ -54,22 +70,31 @@
 					<div class="about-us-downside">
 						
 						<div class="about-container">
-							<h5 class="h5">Lorem, ipsum dolor.</h5>
-							<p class="text-about">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</p>
+							<h5 class="h5">Чем мы занимаемся</h5>
+							<p class="text-about">Мы занимаемся покупкой и доставкой автомобилей уже более десяти лет, за это время было 
+								привезено более сотни автомобилей самых разных классов, от скромных Daihatsu Boon и Honda 
+								Fit, до представительских Toyota Crown, BMW X5 и Toyota Alfard. От заряженных Subaru Impreza 
+								WRX и Toyota Cresta Roulant G до практичных Honda Stepwgn и Subaru Outback.</p>
 						</div>
 
 						<div class="void"></div>
 							
 						<div class="about-container">
-							<h5 class="h5">Lorem, ipsum dolor.</h5>
-							<p class="text-about">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+							<h5 class="h5">Почему нам доверяют</h5>
+							<p class="text-about">Мы тщательно подходим к процессу выбора и покупки автомобиля, всякий раз стремимся 
+								полностью понять цели клиента, его финансовые возможности, для нас крайне важно купить 
+								автомобиль в хорошем состоянии, избегая при этом излишних затрат. На аукционах всегда 
+								тщательно изучаем лоты, убеждаясь в хорошем состоянии автомобиля, всегда согласуем ставки с 
+								клиентами.</p>
 						</div>
 
 						<div class="void"></div>
 
 						<div class="about-container">
-							<h5 class="h5">Lorem, ipsum dolor.</h5>
-							<p class="text-about">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+							<h5 class="h5">Почему с нами удобно</h5>
+							<p class="text-about">Мы всегда помогаем клиентам в обслуживании автомобилей, консультируем в подборе запчастей 
+								и расходников, заказываем запчасти у поставщиков, по ценам ниже рыночных, или помогаем найти 
+								и доставить запчасти с контрактных автомобилей без пробега по России.</p>
 						</div>
 							
 					</div>
@@ -80,7 +105,7 @@
 				<div class="portfolio">
 
 					<div class="portfolio-heading">
-						<h3 class="h3">Вот, что мы можем привезти</h3>
+						<h3 class="h3">Малая часть того, что мы возим</h3>
 						<img src="/separator.png" alt="separator" />
 					</div>
 						<div id="grid-items" class="grid-items">
@@ -109,43 +134,45 @@
 					<div class="features-cases">
 								<div class="features-case">
 									<div>
-										<h5>REASON WHY RUSTAM NOT GAY</h5>
-										<h6>We define the trends. Enough Said!</h6>
-										<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+										<h5 class="h5">Откуда мы появились</h5>
+										<p>Большинство наших клиентов узнавали о нас через «сарафанное радио», мы начинали работать с 
+											того, что привезли автомобиль Toyota Probox нашему близкому родственнику, затем привезли 
+											себе Daihatsu Boon, дальше к нам приходили всё новые люди, желавшие обновить автомобиль.  </p>
+										<p> Дело в том, что автомобиль с Японии, как правило будет иметь более хорошую комплектацию и 
+											состояние, чем такой же автомобиль купленный в России за ту же цену, порой состояние 
+											автомобиля просто поражает, нам случалось видеть автомобили возрастом 20 лет в состоянии 
+											нового. </p>
 									</div>
+									<div class="features-void"></div>
+									<img src="/counterup/1trust.png" alt="">
+								</div>
+								<div class="features-case">
+										<img class="pseudo" src="/counterup/2trust.png" alt="">
+									<div class="features-void"></div>
+									<div>
+										<h5 class="h5">Вы все знаете сразу</h5>
+										<p>Что немаловажно, мы сразу говорим обо всех условия покупки автомобиля и сразу озвучиваем 
+											стоимость наших услуг и первый взнос. Соответственно, заносим все эти данные в договор. 
+											Поскольку у нас небольшая компания, мы не берем много денег за свою работу, в среднем около 
+											40 000 рублей, причем получаем их уже при передаче автомобиля клиенту. </p>
+										<p>Первый взнос 
+											составляет 10% от предполагаемой стоимости автомобиля в Японии, но не менее 50 000 рублей. 
+											Он необходим для возможности торгов на аукционах, впоследствии он будет включён в стоимость 
+											доставки автомобиля по России.</p>
+									</div>
+									<img class="pseudo2" src="/counterup/2trust.png" alt="">
 								</div>
 								<div class="features-case">
 									<div>
-										<h5>REASON WHY RUSTAM NOT GAY</h5>
-										<h6>We define the trends. Enough Said!</h6>
-										<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+										<h5 class="h5">Тесное взаимодействие с заказчиком</h5>
+										<p>В процессе торгов мы обсуждаем с клиентом все ставки, смотрим на комплектацию, состояние, 
+											место эксплуатации автомобиля, переводим аукционные листы. Помогаем клиентам выбрать 
+											наиболее подходящий автомобиль, говорим о возможных подводных камнях те или иных моделей. </p>
 									</div>
-								</div>
-								<div class="features-case">
-									<div>
-										<h5>REASON WHY RUSTAM NOT GAY</h5>
-										<h6>We define the trends. Enough Said!</h6>
-										<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-									</div>
+									<div class="features-void"></div>
+									<img src="/counterup/3trust.png" alt="">
 								</div>
 					</div>
-				</div>
-			
-				<!-- Achivement -->
-				<div class="achivement">
-					<div class="overlay sections">
-						<div class="achivement-content">
-							<div class="col-sm-8 col-xs-12">
-								<div class="achivement-details">
-									<h2>Доставим вам машину</h2>
-									<p>Our last responsive work in process. Just use the link below to watch what we are doing right now. Hope you like it!</p>
-								</div>
-							</div>
-							<div class="achivement-photo">
-								<img src="/iphone.png" alt="Gallery Image" />
-							</div>
-						</div>
-					</div>		
 				</div>
 
 
@@ -153,41 +180,41 @@
 				<div class="counterups">
 									<div class="counterup">
 										<div class="counterup-photo">
-											<img src="/counterup/1.png" alt="counterup" />
+											<img src="/counterup/worker.svg" alt="counterup" />
+										</div>
+										<div class="counterup-content">
+											<h5 class="count-number">78</h5>
+											<h6>Довольных клиентов</h6>
+										</div>
+									</div>
+								
+									<div class="counterup">
+										<div class="counterup-photo">
+											<img src="/counterup/clock.svg" alt="counterup" />
 										</div>
 										<div class="counterup-content">
 											<h5 class="count-number">11</h5>
-											<h6>Workers</h6>
+											<h6>Лет на рынке</h6>
 										</div>
 									</div>
 								
 									<div class="counterup">
 										<div class="counterup-photo">
-											<img src="/counterup/2.png" alt="counterup" />
+											<img src="/counterup/setting-two.svg" alt="counterup" />
 										</div>
 										<div class="counterup-content">
-											<h5 class="count-number">6542</h5>
-											<h6>Cars prevezeno</h6>
+											<h5 class="count-number">278 635</h5>
+											<h6>Запчастей привезено</h6>
 										</div>
 									</div>
 								
 									<div class="counterup">
 										<div class="counterup-photo">
-											<img src="/counterup/3.png" alt="counterup" />
+											<img src="/counterup/car.svg" alt="counterup" />
 										</div>
 										<div class="counterup-content">
-											<h5 class="count-number">254</h5>
-											<h6>Details prevezeno</h6>
-										</div>
-									</div>
-								
-									<div class="counterup">
-										<div class="counterup-photo">
-											<img src="/counterup/4.png" alt="counterup" />
-										</div>
-										<div class="counterup-content">
-											<h5 class="count-number">435</h5>
-											<h6>Drunk coffee</h6>
+											<h5 class="count-number">123</h5>
+											<h6>Автомобиля привезено</h6>
 										</div>
 									</div>
 				</div>
@@ -206,14 +233,14 @@
 								<div class="thank-you-form">
 									<div>
 										<div class="form-group">
-											<input id="name" type="text" class="form-control1" placeholder="name">
+											<input autocomplete="off" id="name" type="text" class="form-control1" placeholder="name">
 										</div>
 										<div class="form-group">
-											<input id="email" type="email" class="form-control2" placeholder="email">
+											<input autocomplete="off" id="email" type="email" class="form-control2" placeholder="email">
 										</div>
 										
 										<div class="form-group">
-											<input id="message" class="form-control3" placeholder="message"></input>
+											<input autocomplete="off" id="message" class="form-control3" placeholder="message"></input>
 										</div>
 									</div>
 										
@@ -228,7 +255,7 @@
 		
         <!--Footer-->
         <footer class="footer">
-				<p>Made by drl1ng.</p>
+			<a class="" href="https://t.me/drl1ng">made by drl1ng</a>
         </footer>
     </body>
 </html>
