--- a/ejs-views/partials/auth.ejs
+++ b/ejs-views/partials/auth.ejs
@@ -1,7 +1,8 @@
-<form method="post" action="/auth" class="auth">
+<div class="auth">
     <div class="inputs">
-        <input name="login" id="login" placeholder="login" type="text">
-        <input name="password" id="password" placeholder="pass" type="text">
+        <input autocomplete="off" id="login" placeholder="login" type="text">
+        <input autocomplete="off" type="password" id="password" placeholder="pass">
     </div>
-    <button type="submit" id="loginButton">enter</button>
-</form>
+    <button class="loginb" id="loginButton">enter</button>
+    <button class="closeb" id="closeAuthButton"> <a>закрыть</a> </button>
+</div>
