--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@ nav {
   right: 0;
   min-height: 60px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   background:#292929;
 }
 
