--- a/ejs-views/posts.ejs
+++ b/ejs-views/posts.ejs
@@ -43,7 +43,7 @@
       }
 
       if (id) {
-        fetch(`http://localhost:3000/auth/delete`, {
+        fetch(`http://shinsetsu-wheels.ru/auth/delete`, {
           method: 'DELETE',
           headers: {
             'Content-Type': 'application/json',
